--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
-    "next": "14.2.25",
+    "next": "^16.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^3.4.0"
