--- a/backend/HealthEco.API/appsettings.Development.json
+++ b/backend/HealthEco.API/appsettings.Development.json
@@ -1,11 +1,20 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=healtheco_dev;Username=postgres;Password=pinle2409"
+    "DefaultConnection": "${DATABASE_URL}"
+  },
+  "JwtSettings": {
+    "Secret": "development-secret-key-change-in-production",
+    "Issuer": "HealthEcoAPI-Dev",
+    "Audience": "HealthEcoUsers-Dev",
+    "AccessTokenExpirationMinutes": 1440,
+    "RefreshTokenExpirationDays": 30,
+    "FrontendUrl": "https://health-eco.vercel.app/"
   }
 }
