--- a/backend/HealthEco.API/appsettings.json
+++ b/backend/HealthEco.API/appsettings.json
@@ -2,11 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=healtheco;Username=postgres;Password=pinle2409"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=healtheco;Username=postgres;Password=pinle2409;Pooling=true;"
+  },
+  "JwtSettings": {
+    "Secret": "your-super-secret-key-with-at-least-32-characters-here-change-in-production",
+    "Issuer": "HealthEcoAPI",
+    "Audience": "HealthEcoUsers",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7,
+    "FrontendUrl": "https://health-eco.vercel.app/"
   }
 }
