fix seed data railway

--- a/backend/HealthEco.API/appsettings.Development.json
+++ b/backend/HealthEco.API/appsettings.Development.json
@@ -3,18 +3,19 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.EntityFrameworkCore": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "${DATABASE_URL}"
+    "DefaultConnection": "Host=ep-nameless-waterfall-a2xibg70.eu-central-1.aws.neon.tech;Port=5432;Database=healtheco;Username=healtheco_owner;Password=pinle2409;SslMode=Require;"
   },
   "JwtSettings": {
-    "Secret": "development-secret-key-change-in-production",
+    "Secret": "development-secret-key-change-in-production-32-chars-min",
     "Issuer": "HealthEcoAPI-Dev",
     "Audience": "HealthEcoUsers-Dev",
     "AccessTokenExpirationMinutes": 1440,
     "RefreshTokenExpirationDays": 30,
-    "FrontendUrl": "https://health-eco.vercel.app/"
+    "FrontendUrl": "https://health-eco.vercel.app"
   }
 }
