--- a/backend/HealthEco.API/appsettings.json
+++ b/backend/HealthEco.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=healtheco;Username=postgres;Password=pinle2409;Pooling=true;"
+    "DefaultConnection": "${DATABASE_URL}"
   },
   "JwtSettings": {
     "Secret": "your-super-secret-key-with-at-least-32-characters-here-change-in-production",
