Fix DATABASE_URL parsing and add logging

--- a/backend/HealthEco.API/appsettings.json
+++ b/backend/HealthEco.API/appsettings.json
@@ -8,14 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "${DATABASE_URL}"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=healtheco;Username=postgres;Password=yourpassword;Include Error Detail=true"
   },
   "JwtSettings": {
-    "Secret": "your-super-secret-key-with-at-least-32-characters-here-change-in-production",
+    "Secret": "your-very-long-super-secret-jwt-key-minimum-32-characters-change-this-in-production",
     "Issuer": "HealthEcoAPI",
     "Audience": "HealthEcoUsers",
     "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7,
-    "FrontendUrl": "https://health-eco.vercel.app/"
+    "FrontendUrl": "https://health-eco.vercel.app"
   }
 }
