update login last

--- a/backend/HealthEco.API/appsettings.Development.json
+++ b/backend/HealthEco.API/appsettings.Development.json
@@ -1,21 +1,21 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-nameless-waterfall-a2xibg70.eu-central-1.aws.neon.tech;Port=5432;Database=healtheco;Username=healtheco_owner;Password=pinle2409;SslMode=Require;"
-  },
   "JwtSettings": {
-    "Secret": "development-secret-key-change-in-production-32-chars-min",
-    "Issuer": "HealthEcoAPI-Dev",
-    "Audience": "HealthEcoUsers-Dev",
-    "AccessTokenExpirationMinutes": 1440,
-    "RefreshTokenExpirationDays": 30,
-    "FrontendUrl": "https://health-eco.vercel.app"
-  }
+    "Secret": "YOUR_SUPER_SECRET_KEY_MIN_32_CHARACTERS_LONG_12345",
+    "Issuer": "HealthEco_API",
+    "Audience": "HealthEco_Client",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7,
+    "FrontendUrl": "https://health-eco.vercel.app/"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=your-postgres-host;Database=your-db;Username=your-user;Password=your-password;SSL Mode=Require;Trust Server Certificate=true;"
+  },
+  "AllowedHosts": "*"
 }
