--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "next": "^16.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
