--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "openai": "^6.16.0",
