--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,17 @@
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "openai": "^6.16.0",
+    "pg": "^8.17.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.23",
